--- a/style/style.css
+++ b/style/style.css
@@ -753,7 +753,7 @@ i.flash-fill {
     height: 980px;
     left: -171px;
     top: -53px;
-    
+
     z-index: 2;
 }
 
@@ -768,6 +768,7 @@ i.flash-fill {
     z-index: -1;
     border-radius: 50%;
 }
+
 .coin-1 {
     z-index: 3;
     position: absolute;
@@ -778,6 +779,7 @@ i.flash-fill {
     background: url('../images/coin1.svg');
     transform: rotate(1deg);
 }
+
 .coin-2 {
     z-index: 1;
     position: absolute;
@@ -789,6 +791,7 @@ i.flash-fill {
     background-size: contain;
     /* transform: rotate(1deg); */
 }
+
 .coin-3 {
     z-index: 1;
     position: absolute;
@@ -1056,8 +1059,9 @@ i.flash-fill {
     padding: 25px;
     position: relative;
     overflow: hidden;
-    -webkit-transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0, 0, 0);
 }
+
 .owl-theme .owl-dots .owl-dot span {
     width: 20px;
     height: 20px;
@@ -1068,7 +1072,9 @@ i.flash-fill {
     transition: opacity .2s ease;
     border-radius: 30px;
 }
-.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+
+.owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
     background: #C94CF4;
 }
 
@@ -1531,8 +1537,6 @@ i.flash-fill {
     background-size: contain;
     opacity: 1;
     z-index: 3;
-
-
 }
 
 .product-section-second .resource-sm {
@@ -1549,17 +1553,192 @@ i.flash-fill {
     z-index: 3;
 }
 
+.in-roadmap {
+    position: relative;
+    height: 730px;
+    padding-top: 120px;
+}
+
+.in-roadmap::before {
+    content: '';
+    position: absolute;
+    width: 1882px;
+    height: 624px;
+    left: 0px;
+    top: 125px;
+    background: linear-gradient(84.02deg, rgba(119, 10, 157, 0.3) 34.06%, rgba(37, 177, 255, 0.3) 74.85%);
+    filter: blur(192px);
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+    z-index: -1;
+}
+
+ul.nav-tabs-map li.nav-item {
+    margin-bottom: 65px;
+    text-align: right;
+    display: block;
+    width: 100%;
+}
+
+ul.nav-tabs-map li.nav-item button {
+    padding: 0px;
+    background: rgba(201, 76, 244, 0.4);
+    border-radius: 10px !important;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    border: 0;
+    margin: 0 auto;
+}
+ul.nav-tabs-map li.nav-item button span {
+    display: none;
+}
+
+ul.nav-tabs-map li.nav-item button.active {
+    display: block;
+    background: #C94CF4;
+    border-radius: 10px;
+    /* padding: 10px 20px; */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    width: 69px;
+    height: 27px;
+    filter: drop-shadow(0px 0px 24px #C94CF4);
+}
+ul.nav-tabs-map li.nav-item button.active span {
+    display: block;
+    font-size: 10px;
+}
+
+
+.in-road-card {
+    height: 220px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    transition: all 0.5s;
+}
+
+.in-road-card::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 220px;
+    background: rgba(225, 9, 165, 0.04);
+    border-radius: 10px;
+    z-index: 3;
+}
+
+.in-road-card img {
+    width: 100%;
+    border-radius: 10px;
+    z-index: 2;
+    opacity: 0.2;
+    transition: all 0.5s;
+}
+
+.road-card-body {
+    position: absolute;
+    top: 0;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 220px;
+    z-index: 5;
+    padding: 35px 30px 0;
+    border-radius: 10px;
+}
+
+.road-card-body .tag {
+    background: linear-gradient(0deg, #C94CF4, #C94CF4), #4B79EF;
+    border-radius: 3.9px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 160%;
+    text-align: center;
+    color: #FFFFFF;
+    padding: 2px 15px;
+    display: inline-block;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+.road-card-body .title {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 120%;
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 10px;
+    max-width: 210px;
+}
+
+.road-card-body .text {
+    margin-bottom: 0;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 160%;
+    color: #DBDBDB;
+}
+
+.in-road-card:hover {
+    box-shadow: 0px 0px 84px rgba(201, 76, 244, 0.6);
+}
+.in-road-card:hover img {
+    opacity: 0.4;
+}
+
+
+a.btn-tabs {
+    display: block;
+    text-align: center;
+    color: #C94CF4 !important;
+    cursor: pointer;
+}
 
 
 
 
 
 
+
+
+
+
+
+.card-section-description {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 27px;
+    line-height: 40px;
+    text-align: left;
+    background: linear-gradient(88.74deg, rgba(201, 76, 244, 0.3) -8.16%, rgba(37, 203, 255, 0.3) 58.17%), #FFFFFF;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+    text-shadow: 0px 4px 32px rgba(0, 0, 0, 0.25);
+    margin-bottom: 70px;
+}
 
 
 
 
 
 footer#footer {
-    background: rgba(55, 58, 90, 0.5);
+    background: rgba(4, 5, 15, 0.2);
+    backdrop-filter: blur(7.5px);
 }
