--- a/style/xs.css
+++ b/style/xs.css
@@ -737,10 +737,74 @@
         padding: 0;
         position: relative;
         width: 100%;
+        height: 100px;
         margin: 0 auto;
     }
 
+    .lines .top-horizontal {
+        position: absolute;
+        width: 90%;
+        left: 5%;
+        top: 11px;
+        height: 0.5px;
+        opacity: 0.33;
+        background-color: #AAAAAA;
+    }
+
+    .lines .center-horizontal {
+        position: absolute;
+        width: 76%;
+        left: 12%;
+        top: 50%;
+        height: 0.5px;
+        opacity: 0.33;
+        background-color: #AAAAAA;
+    }
+
+    .lines .bottom-horizontal {
+        position: absolute;
+        width: 90%;
+        left: 5%;
+        bottom: 9px;
+        height: 0.5px;
+        opacity: 0.33;
+        background-color: #AAAAAA;
+    }
+
+    .lines .top-vertical {
+        position: absolute;
+        height: 80%;
+        left: 12%;
+        top: 10%;
+        width: 0.5px;
+        opacity: 0.33;
+        background-color: #AAAAAA;
+    }
+
+    .lines .center-vertical {
+        position: absolute;
+        height: 80%;
+        left: 50%;
+        top: 10%;
+        width: 0.5px;
+        opacity: 0.33;
+        background-color: #AAAAAA;
+    }
+
+    .lines .bottom-vertical {
+        position: absolute;
+        height: 80%;
+        right: 12%;
+        top: 10%;
+        width: 0.5px;
+        opacity: 0.33;
+        background-color: #AAAAAA;
+    }
+
+
+
     .ggrid {
+        display: none;
         height: 380px;
         position: absolute;
         height: 80px;
@@ -816,20 +880,20 @@
 
     .grid-col .gc.centerer {
         position: absolute;
-        top: 27px;
+        top: 30px;
         left: 50%;
         margin-left: -65px;
     }
 
     .grid-col .gc:nth-child(4) {
         position: absolute;
-        top: 70px;
+        top: 76px;
         left: 0;
     }
 
     .grid-col .gc:nth-child(5) {
         position: absolute;
-        top: 70px;
+        top: 76px;
         right: 0;
     }
 
@@ -1283,6 +1347,621 @@
         margin: 45px auto 0;
         width: 135px;
         height: 50px;
+    }
+
+
+    /*home*/
+    #about-screen {
+        position: relative;
+        z-index: 8;
+        height: 900px;
+    }
+
+    #about-screen::before {
+        content: '';
+        position: absolute;
+        width: 907px;
+        height: 375px;
+        left: 0;
+        top: 0;
+        background: linear-gradient(82.66deg, rgba(37, 203, 255, 0.3) 35.46%, rgba(201, 76, 244, 0.3) 75.27%);
+        filter: blur(122px);
+        transform: matrix(0, 1, 1, 0, 0, 0);
+        z-index: -1;
+    }
+
+    .card-about {
+        width: 336px;
+        margin: 0 auto 40px;
+    }
+
+
+    #subscribe {
+        height: 632px;
+    }
+
+    .in-subscribe {
+        position: relative;
+        padding-top: 5px;
+    }
+
+    .in-subscribe::before {
+        content: '';
+        position: absolute;
+        width: 375px;
+        height: 608px;
+        left: 0px;
+        top: 0px;
+        background: linear-gradient(82.66deg, rgba(37, 203, 255, 0.16) 35.46%, rgba(201, 76, 244, 0.16) 75.27%);
+        filter: blur(40px);
+        transform: matrix(-1, 0, 0, 1, 0, 0);
+        z-index: -3;
+    }
+
+    .subscribe-start .sale {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 100%;
+        letter-spacing: 0.15em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+    }
+
+    .align-xs-center {
+        display: block !important;
+        text-align: center;
+    }
+
+    span.sale-badge {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 11px;
+        line-height: 100%;
+        letter-spacing: 0.08em;
+        text-transform: uppercase;
+        background: linear-gradient(90.26deg, #C94CF4 45.29%, #25CBFF 100%);
+        color: #FFFFFF;
+        border-radius: 5px;
+        padding: 6px 11px;
+    }
+
+    span.sale-badge>strong {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 900;
+        font-size: 11px;
+        line-height: 100%;
+        letter-spacing: 0.08em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        margin-right: 5px;
+    }
+
+    .subscribe-start .title {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 42px;
+        line-height: 120%;
+        text-align: center;
+        color: #FFFFFF;
+        margin: 15px 0 10px;
+    }
+
+    .subscribe-start .text {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        text-align: center;
+        background: linear-gradient(88.74deg, rgba(201, 76, 244, 0.3) -8.16%, rgba(37, 203, 255, 0.3) 58.17%), #FFFFFF;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        text-shadow: 0px 2.49702px 19.9761px rgba(0, 0, 0, 0.25);
+        margin-bottom: 40px;
+    }
+
+    .subscribe-start .btn-order {
+        margin: 0 auto;
+        display: block;
+    }
+
+    .subscribe-end {
+        position: relative;
+        height: 195px;
+        margin-top: 50px;
+    }
+
+    .subscribe-end::before {
+        content: '';
+        position: absolute;
+        width: 597px;
+        height: 268px;
+        left: 0px;
+        top: 0px;
+        background: linear-gradient(82.66deg, rgba(37, 203, 255, 0.2) 35.46%, rgba(201, 76, 244, 0.2) 75.27%);
+        filter: blur(40px);
+        transform: matrix(-1, 0, 0, 1, 0, 0);
+    }
+
+    .laptop {
+        position: absolute;
+        width: 328px;
+        height: 174px;
+        left: 50%;
+        margin-left: -164px;
+        top: 20px;
+        background: url('../images/laptop.svg') no-repeat;
+        background-size: contain;
+    }
+
+    .arrow-lg {
+        position: absolute;
+        width: 336px;
+        height: 187px;
+        left: 50%;
+        margin-left: -168px;
+        top: 5px;
+        background: url('../images/arrow-lg.svg') no-repeat;
+        background-size: contain;
+    }
+
+    #work {
+        position: relative;
+        padding: 0px 0 70px;
+    }
+
+
+    .in-work {
+        position: relative;
+        padding-top: 30px;
+    }
+
+    .in-work .title {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 42px;
+        line-height: 100%;
+        color: #FFFFFF;
+        text-align: center;
+        margin-bottom: 5px;
+    }
+
+    .work-box-first {
+        margin-top: 40px;
+    }
+
+    .work-box {
+        padding: 0px 0 0px;
+        height: 545px;
+        position: relative;
+    }
+
+    .work-box .work-box-start {
+        padding-top: 5px;
+        position: relative;
+        height: 335px;
+        margin-top: 5px;
+    }
+
+    .work-first::before {
+        content: '';
+        position: absolute;
+        width: 334.94px;
+        height: 334.94px;
+        left: 50%;
+        margin-left: -167px;
+        top: 0px;
+        background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(5.63284px);
+        border-radius: 19.4731px;
+        z-index: -1;
+    }
+
+    .work-box-first::before {
+        content: '';
+        position: absolute;
+        width: 375px;
+        height: 545px;
+        left: 0px;
+        top: 0px;
+        background: linear-gradient(88.7deg, rgba(37, 203, 255, 0.5) 28.76%, rgba(201, 76, 244, 0.5) 61.12%);
+        filter: blur(247px);
+        transform: matrix(-1, 0, 0, 1, 0, 0);
+        z-index: -1;
+    }
+
+    .work-first img {
+        position: relative;
+        width: 326px;
+        height: 326px;
+        left: 50%;
+        margin-left: -210px;
+        top: 0px;
+        border-radius: 11.8586px;
+        transform: matrix(-1, 0, 0, 1, 0, 0);
+    }
+
+    .work-bounce-sm {
+        position: absolute;
+        width: 326.57px;
+        height: 326.11px;
+        left: calc(50% - 326.57px/2 + 0.09px);
+        top: calc(50% - 326.11px/2 + 1.57px);
+        background: rgba(76, 93, 244, 0.5);
+        filter: blur(60.479px);
+        z-index: -1;
+    }
+
+    .work-box-first .work-box-end,
+    .work-box-third .work-box-end {
+        padding: 0 30px 0;
+        margin-top: 25px;
+    }
+
+    .work-box-end .pre-text {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 21px;
+        letter-spacing: 0.4em;
+        background: linear-gradient(90.26deg, rgba(201, 76, 244, 0.4) 45.29%, rgba(37, 203, 255, 0.4) 100%), #FFFFFF;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        text-transform: uppercase;
+    }
+
+    .work-box-end .name {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 45px;
+        color: #FFFFFF;
+    }
+
+    .work-box-end .text {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 26px;
+        color: #D5D5D5;
+    }
+
+    .work-box-second {
+        margin-top: 50px;
+    }
+
+    .work-box-second .work-box-end {
+        padding: 0 30px 0;
+        margin-top: 25px;
+    }
+
+    .work-box-second::before {
+        content: '';
+        position: absolute;
+        width: 375px;
+        height: 567px;
+        left: 0px;
+        top: 0.07px;
+        background: linear-gradient(88.7deg, rgba(37, 203, 255, 0.5) 28.76%, rgba(201, 76, 244, 0.5) 61.12%);
+        filter: blur(247px);
+        transform: matrix(-1, 0, 0, 1, 0, 0);
+        z-index: -1;
+    }
+
+    .work-second::before {
+        content: '';
+        position: absolute;
+        width: 334.94px;
+        height: 334.94px;
+        left: 50%;
+        margin-left: -167px;
+        top: 0px;
+        background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(5.63284px);
+        border-radius: 19.4731px;
+        z-index: -1;
+    }
+
+    .work-second img {
+        position: relative;
+        width: 326px;
+        height: 326px;
+        left: 50%;
+        margin-left: -160px;
+        top: 0px;
+        border-radius: 11px;
+    }
+
+    .work-box-third {
+        margin-top: 50px;
+    }
+
+    .work-box-third .work-box-end {
+        padding: 0 30px 0;
+        margin-top: 25px;
+    }
+
+    .work-box-third::before {
+        content: '';
+        position: absolute;
+        width: 375px;
+        height: 567px;
+        left: 0px;
+        top: 0.07px;
+        background: linear-gradient(88.7deg, rgba(37, 203, 255, 0.5) 28.76%, rgba(201, 76, 244, 0.5) 61.12%);
+        filter: blur(247px);
+        transform: matrix(-1, 0, 0, 1, 0, 0);
+        z-index: -1;
+    }
+    .work-box .work-third {
+        padding-top: 5px;
+        position: relative;
+        height: 360px;
+        margin-top: 5px;
+    }
+    
+
+    .work-card {
+        width: 220px;
+        background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(5.46288px);
+        border-radius: 12px;
+        z-index: 1;
+        position: relative;
+        left: 50%;
+        margin-left: -150px;
+    }
+
+    .work-card .card-image {
+        width: 100%;
+        height: 170px;
+        background: linear-gradient(78.84deg, rgba(169, 148, 255, 0.65) 0%, rgba(62, 35, 169, 0.21) 98.69%);
+        border-radius: 11px 11px 0px 0px;
+    }
+
+    .card-img,
+    .card-img-bottom,
+    .card-img-top {
+        width: 100%;
+        height: 150px;
+        position: relative;
+        top: 10px;
+    }
+
+    .work-card .card-body {
+        background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(10.2917px);
+        padding: 15px 17px;
+    }
+
+    .work-card .card-badge {
+        background: linear-gradient(99.2deg, #363EFF -3.15%, #61AAFF 100%);
+        box-shadow: 0px 0px 58.5px rgba(80, 139, 255, 0.49);
+        border-radius: 5.41667px;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 10px;
+        line-height: 12px;
+        letter-spacing: 0.3em;
+        color: #FFFFFF;
+        display: inline-block;
+        padding: 5px 8px;
+        margin-bottom: 10px;
+    }
+
+    .work-card .card-title {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 17px;
+        line-height: 26px;
+        color: #FFFFFF;
+    }
+
+    .work-card .card-text {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 12px;
+        max-width: 295px;
+        color: #D1D1D1;
+    }
+
+    .work-card a {
+        background: linear-gradient(90.4deg, #C94CF4 -32.37%, #25CBFF 93.03%), rgba(145, 68, 222, 0.76);
+        border-radius: 0px 0px 15px 15px;
+        display: block;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 11px;
+        line-height: 29px;
+        letter-spacing: 0.2em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        text-align: center;
+        padding: 10px;
+    }
+
+    .work-card-copy {
+        position: absolute;
+        width: 220px;
+        height: 358px;
+        left: 50%;
+        margin-left: -50px;
+        top: 4px;
+        transform: scale(0.9);
+        background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
+        opacity: 0.5;
+        backdrop-filter: blur(9.39842px);
+        border-radius: 15px;
+        z-index: -1;
+    }
+
+
+    .card-section {
+        margin-top: 90px;
+        height: 1570px;
+        position: relative;
+    }
+
+    .card-section::before {
+        content: '';
+        position: absolute;
+        width: 350px;
+        height: 1575px;
+        left: 0px;
+        top: 0px;
+        background: linear-gradient(82.66deg, rgba(37, 203, 255, 0.2632) 49.72%, rgba(201, 76, 244, 0.28) 75.27%);
+        filter: blur(186.5px);
+    }
+
+    .card-section-title {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 42px;
+        line-height: 120%;
+        color: #FFFFFF;
+        text-align: center;
+    }
+
+    .card-section-description {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        text-align: center;
+        background: linear-gradient(88.74deg, rgba(201, 76, 244, 0.3) -8.16%, rgba(37, 203, 255, 0.3) 58.17%), #FFFFFF;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        text-shadow: 0px 2.49702px 19.9761px rgba(0, 0, 0, 0.25);
+        margin-bottom: 70px;
+    }
+
+    .card-invite {
+        margin-bottom: 70px;
+    }
+
+    .card-invite-first>.in-card-invite::before {
+        content: '';
+        position: absolute;
+        width: 337px;
+        height: 347px;
+        left: 0px;
+        top: 0px;
+        background: rgba(37, 203, 255, 0.46);
+        filter: blur(99.7818px);
+        z-index: -1;
+        transition: all 0.5s;
+    }
+
+    .card-invite .rank {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 28px;
+        letter-spacing: 0.3em;
+        text-transform: uppercase;
+        background: linear-gradient(78.84deg, rgba(72, 123, 255, 0.357) 0%, rgba(65, 65, 65, 0.147) 98.69%), #FFFFFF;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+    }
+
+    .card-invite .percent {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 100px;
+        line-height: 154px;
+        letter-spacing: -0.03em;
+        background: linear-gradient(272.72deg, rgba(66, 0, 255, 0.1) -47.34%, rgba(92, 157, 255, 0.1) 100.35%), #FFFFFF;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        mix-blend-mode: normal;
+    }
+
+    .card-invite.card-invite-first p.description {
+        max-width: 100%;
+    }
+
+    .card-invite p.description {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 160%;
+        color: #E8E8E8;
+        margin-bottom: 30px;
+    }
+
+    .card-invite span.lines {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: 0.18em;
+        text-transform: uppercase;
+        background: linear-gradient(78.84deg, rgba(72, 123, 255, 0.357) 0%, rgba(65, 65, 65, 0.147) 98.69%), #FFFFFF;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+    }
+
+    .card-invite span.lines-level {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 900;
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: 0.18em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+    }
+
+    .card-invite-second>.in-card-invite::before {
+        content: '';
+        position: absolute;
+        width: 336px;
+        height: 373px;
+        left: 19px;
+        top: 0px;
+        background: rgba(225, 37, 255, 0.46);
+        filter: blur(99.7818px);
+        z-index: -1;
+        transition: all 0.5s;
+    }
+
+    .card-invite-third>.in-card-invite::before {
+        content: '';
+        position: absolute;
+        width: 336px;
+        height: 373px;
+        left: 19px;
+        top: 0px;
+        background: rgba(37, 255, 137, 0.46);
+        filter: blur(99.7818px);
+        z-index: -1;
+        transition: all 0.5s;
     }
 
 
